--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/master.css">
     <meta charset="utf-8">
     <title>Google</title>
   </head>
   <body>
-    Google
+    <nav class="navbar-header navbar-fixed-top">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="https://www.gmail.com">Gmail</a></li>
+        <li><a href="#">Images</a></li>
+        <li><a href="#" class="glyphicon glyphicon-th"></a></li>
+      </ul>
+    </nav>
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+      <ul class="nav navbar-nav">
+        <li><a href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a></li>
+        <li><a href="https://www.google.com/services/?fg=1">Business</a></li>
+        <li><a href="https://www.google.com/intl/en/about.html?fg=1">About</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="https://www.google.com/intl/en/policies/privacy/?fg=1">Privacy</a></li>
+        <li><a href="https://www.google.com/intl/en/policies/terms/?fg=1">Terms</a></li>
+        <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
+      </ul>
+    </nav>
+    <div class="container">
+      <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+      <div class="panel panel-default">
+        <input type="text" class="form-control" aria-describedby="basic-addon1">
+        <span class="glyphicons glyphicons-microphone"></span>
+      </div>
+      <div class="">
+        <button type="button" name="button" class="btn btn-default">Google Search</button>
+        <button type="button" name="button" class="btn btn-default">I'm Feeling Lucky</button>
+      </div>
+    </div>
+
   </body>
 </html>
