Added CSS styling and positioning

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Google</title>
   </head>
   <body>
-    <nav class="navbar-header navbar-fixed-top">
+    <nav id="top-nav" class="navbar navbar-default navbar-fixed-top">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://www.gmail.com">Gmail</a></li>
-        <li><a href="#">Images</a></li>
-        <li><a href="#" class="glyphicon glyphicon-th"></a></li>
+        <li><a href="https://www.google.com/imghp?hl=en&tab=wi&authuser=0&ei=cCv5WOv1PMmLjwTsxquwBw&ved=0EKouCBgoAQ">Images</a></li>
+        <li><a href="https://www.google.com/intl/en/options/" class="glyphicon glyphicon-th"></a></li>
       </ul>
     </nav>
 
-    <nav class="navbar navbar-default navbar-fixed-bottom">
+    <nav id="bottom-nav" class="navbar navbar-default navbar-fixed-bottom">
       <ul class="nav navbar-nav">
         <li><a href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a></li>
         <li><a href="https://www.google.com/services/?fg=1">Business</a></li>
@@ -27,17 +27,15 @@
         <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
       </ul>
     </nav>
-    <div class="container">
+    <center class="container">
       <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
       <div class="panel panel-default">
         <input type="text" class="form-control" aria-describedby="basic-addon1">
         <span class="glyphicons glyphicons-microphone"></span>
       </div>
-      <div class="">
-        <button type="button" name="button" class="btn btn-default">Google Search</button>
-        <button type="button" name="button" class="btn btn-default">I'm Feeling Lucky</button>
-      </div>
-    </div>
+      <button type="button" name="button" class="btn btn-default">Google Search</button>
+      <button type="button" name="button" class="btn btn-default">I'm Feeling Lucky</button>
+    </center>
 
   </body>
 </html>
