Replaced center tag on logo with div tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
       </ul>
     </nav>
-    <center class="container">
+    <div class="container">
       <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
       <div class="panel panel-default">
         <input type="text" class="form-control" aria-describedby="basic-addon1">
@@ -36,7 +36,7 @@
       </div>
       <button type="button" name="button" class="btn btn-default">Google Search</button>
       <button type="button" name="button" class="btn btn-default">I'm Feeling Lucky</button>
-    </center>
+    </div>
 
   </body>
 </html>
