Fixed container centering

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
         <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
       </ul>
     </nav>
-    <div class="container">
+    <div id="logo" class="container">
       <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
-      <div class="panel panel-default">
-        <input type="text" class="form-control" aria-describedby="basic-addon1">
-        <span class="glyphicons glyphicons-microphone"></span>
-      </div>
+    </div>
+    <div id="search-bar" class="panel panel-default container">
+      <input type="text" class="form-control" aria-describedby="basic-addon1">
+    </div>
+    <div id="search-btns" class="container">
       <button type="button" name="button" class="btn btn-default">Google Search</button>
       <button type="button" name="button" class="btn btn-default">I'm Feeling Lucky</button>
     </div>
+
 
   </body>
 </html>
